avanzando con la actividad leed_malditos, falta terminarlo para empezar la tarea.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - PASSWORD=odoo
     volumes:
       - odoo_data:/var/lib/odoo
-      - addons_path:/mnt/extra-addons
+      - ./extra-addons:/mnt/extra-addons
       - .config/:/etc/odoo/
 
   db:
